# probes-v2

./: AGENTS.md  CLAUDE.md  README.md  council.yaml  main.py  pred.jsonl  pyproject.toml  view.json
examples/email-intent/: arbiter.py  arbiter.yaml  modal_predict.py  modal_reflect.py  postprocess.py  test_parse_bug.py  tune.yaml  tuned_head.pt
examples/spam/: arbiter.yaml
probes2/: eval.py  registry.py  view.py
probes2/finetuning/: __init__.py  default_tune.yaml  fine-tuning.md  linear_head.py  tune.py
probes2/inference/: llm_inference.md  predict.py  probe_inference.md  reflect.py  registry.py
skills/use-modal/: SKILL.md
tests/: test_predict.py  test_reflect.py  test_reflect_calibration.py  test_tune.py
tests/artifacts/: arbiter_ollama.yaml  arbiter_vllm.yaml  data.jsonl  predicted.jsonl  predicted2.jsonl
tests/artifacts/tmp/: output_1gpu.parquet  output_4gpu.parquet
tests/modal/: modal_test_app.py  modal_test_vllm.py
