[project]
name = "probes-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modaic>=0.25.2",
    "datasets",
    "duckdb",
    "transformers>=5",
    "peft",
    "accelerate",
    "modal>=1.3.5",
]

[project.optional-dependencies]
cpu = ["torch", "torchvision"]
mps = ["torch", "torchvision"]
cu128 = ["torch", "torchvision"]

[project.scripts]
predict = "probes2.inference.predict:main"
reflect = "probes2.inference.reflect:main"
tune = "probes2.finetuning.tune:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["probes2"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
modaic = { path = "../modaic/src/modaic-sdk", editable = true }
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[dependency-groups]
dev = [
    "modal>=1.3.5",
    "pytest>=9.0.2",
    "visidata>=3.3",
]


[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
    ],
]
